# nrf_bootloader_example

./: README.md
nrf_secure/: Cargo.toml  README.md  memory.x
nrf_secure/.cargo/: config.toml
nrf_secure/src/: main.rs
nrf_secure/src/flash/: memory.rs
