[package]
name = "blinky-button-demo"
version = "0.1.0"
authors = ["Anand Gedam"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
nrf9160-hal = { version = "0.15.0", features = ["rt"]}
defmt = {version = "0.3.2", optional = true}
defmt-rtt = {version = "0.3.2", optional = true}

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[features]
default = ["defmt", "defmt-rtt"]

[profile.dev]
debug = true

[profile.release]
debug = true
